Alteração no Display Name

--- a/TesteTecnico/Views/Personagens/Index.cshtml
+++ b/TesteTecnico/Views/Personagens/Index.cshtml
@@ -13,16 +13,16 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.id).ToUpper()
+                @Html.DisplayNameFor(model => model.id)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.personagem).ToUpper()
+                @Html.DisplayNameFor(model => model.personagem)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.filme).ToUpper()
+                @Html.DisplayNameFor(model => model.filme)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.cenario).ToUpper()
+                @Html.DisplayNameFor(model => model.cenario)
             </th>
             <th></th>
         </tr>
