--- a/TesteTecnico/Views/Personagens/Read.cshtml
+++ b/TesteTecnico/Views/Personagens/Read.cshtml
@@ -11,25 +11,25 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.id).ToUpper()
+            @Html.DisplayNameFor(model => model.id)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.personagem).ToUpper()
+            @Html.DisplayNameFor(model => model.personagem)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.personagem)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.filme).ToUpper()
+            @Html.DisplayNameFor(model => model.filme)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.filme)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.cenario).ToUpper()
+            @Html.DisplayNameFor(model => model.cenario)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.cenario)
