--- a/TesteTecnico/Views/Personagens/Delete.cshtml
+++ b/TesteTecnico/Views/Personagens/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Deletar</h1>
 
-<h3>Você tem Certeza que Deseja Deletar Este Personagem?</h3>
+<h3>Você tem Certeza que Deseja Deletar Isto?</h3>
 <div>
     <h4>Personagem</h4>
     <hr />
